--- a/05-Statistics-with_mulitple-variables.Rmd
+++ b/05-Statistics-with_mulitple-variables.Rmd
@@ -34,8 +34,33 @@ USJudgeRatings$RTEN_d <- cut(USJudgeRatings$RTEN, median(USJudgeRatings$RTEN))
 glm(RTEN_d ~ INTG, data = USJudgeRatings, family = binomial())
 ```
 
-## Using summarize
+*Parametric t test*
+```{r}
+t.test(extra ~ group, data = sleep)
+```
 
 
-## Other approaches
+
+## Using group_by 
+
+Another way to look at the relationship between variables is to compare values of statistics for different groups.  In this case
+one way to do this is with the group_by function from the `dplyr` package. 
+
+Once you group your data there are a number of other functions within dplyr and in other packages that will use the groups
+ro organiza the results
+
+```{r}
+library(magrittr)
+iris %>% dplyr::group_by(Species)  %>% dplyr::summarize(mean_sepal_length = mean(Sepal.Length),
+                                                        median_sepal_legth = median(Sepal.Length),
+                                                        Upper_CI = mean(Sepal.Length) + 1.96*sd(Sepal.Length),
+                                                        Lower_CI = mean(Sepal.Length) - 1.96*sd(Sepal.Length)
+                                                        )
+```
+
+```{r}
+iris %>% dplyr::group_by(Species)  %>% skimr::skim()
+```
+
+
 
