--- a/06-Graphs.Rmd
+++ b/06-Graphs.Rmd
@@ -29,16 +29,16 @@ ggplot(iris, aes(x = Sepal.Length, y = Sepal.Width))
 ggplot(iris, aes(x = Species, y = Sepal.Width))
 ```
 
-### Adding geom_s
+### Adding geom 
 To add data to the axes you use a "geom" that determines the type of display.  The geom does not modify the
 axis, it adds data to it. To show this, let's save the ggplot information and add to it.
 
-Our first example is only for one variable.
+Our first example is only for one variable.  Often, you will want to add options such as binwidth.
 
 ```{r}
 graph1 <- ggplot(iris, aes(x = Sepal.Length))  
 graph1 + geom_histogram()
-graph1 + geom_dotplot()
+graph1 + geom_dotplot(binwidth = .1)
 graph1 + geom_bar()
 graph1 + geom_density()
 
@@ -52,6 +52,9 @@ graph2 <- ggplot(iris, aes(x = Sepal.Length, y = Sepal.Width))
 
 graph2 + geom_point()
 graph2 + geom_point() + geom_smooth()
+
+graph2_with_species <- ggplot(iris, aes(x = Sepal.Length, y = Sepal.Width, color = Species)) + geom_point()
+graph2_with_species
 ```
 
 This data includes two types of data.  The last example shows how multiple geoms can be combined.
@@ -60,20 +63,35 @@ This data includes two types of data.  The last example shows how multiple geoms
 graph3 <- ggplot(iris, aes(x = Species, y = Sepal.Width))
 
 graph3 + geom_point()
+graph3 + geom_count()
 graph3 + geom_jitter()
 graph3 + geom_boxplot()
 graph3 + geom_boxplot() + geom_jitter()
 ```
 
-### Add titles and labels
+### Add titles and labels, modify axes
+
 There are many additional options that you can use. This document will just show how to add a title
-and labels.
+and labels and modify axes.
 ```{r}
 graph3 + geom_jitter() +
         ggtitle("Sepal Width by Species in the Iris Data") +
         labs(y="Sepal Width", x="Iris Species")  
 ```
 
+The way to modify axes is to use `scale_y_continuous` and `scale_x_continuous`.  These are very flexible and 
+have many options. This section will show how to change or improve some of the previous plots.
+
+```{r}
+
+# Remove irrelevant y axis values
+graph1 + geom_dotplot(binwidth = .1) +
+         scale_y_continuous(NULL, breaks = NULL)
+
+# Use the same tick marks on the x axis match those on the y axis
+graph2 + geom_point() + scale_x_continuous( breaks = seq(4, 8, .5), minor_breaks = waiver())
+
+```
 
 
  There are several websites that give detailed examples of more complex ways to create visualizations. 
