--- a/06-Graphs.Rmd
+++ b/06-Graphs.Rmd
@@ -34,6 +34,7 @@ To add data to the axes you use a "geom" that determines the type of display.  T
 axis, it adds data to it. To show this, let's save the ggplot information and add to it.
 
 Our first example is only for one variable.  Often, you will want to add options such as binwidth.
+The last example shows how to use a slightly different approach to graph the cumulative distribution (ecdf).
 
 ```{r}
 graph1 <- ggplot(iris, aes(x = Sepal.Length))  
@@ -41,7 +42,7 @@ graph1 + geom_histogram()
 graph1 + geom_dotplot(binwidth = .1)
 graph1 + geom_bar()
 graph1 + geom_density()
-
+graph1 + stat_ecdf(geom = "step")
 ```
 
 Our second example uses two interval variables, so has different possibilities than the first. 
