--- a/05-Statistics-with_mulitple-variables.Rmd
+++ b/05-Statistics-with_mulitple-variables.Rmd
@@ -46,7 +46,7 @@ To change the formatting to percentages pipe to the `adorn_pct_formatting()` fun
 mtcars %>% tabyl(cyl, gear) %>%
       adorn_percentages(denominator = "col") %>%
       adorn_pct_formatting() %>%
-      adorn_ns %>%
+      adorn_ns() %>%
       adorn_title()
 ```
 
